# cr_camera_driver

./: .gitignore  CMakeLists.txt  README.md  TUTORIAL.md  package.xml
config/: cameras.yaml  cameras.yaml.bak
geac_init/cfg/: hb_j5dev.json
geac_init/demo/: init_demo
geac_init/lib/: libgeaccam.so.1
geac_init/lib/sensorlib/: libmax9296.so.1  libmax96712.so.1.2.0  libmax96724.so.1.2.0
include/cr_camera_driver/: cr_h265_encoder.hpp  cr_image_publisher.hpp  cr_v4l2_camera.hpp  cr_vic_converter.hpp  cr_yaml_config.hpp
launch/: cr_cameras.launch.py
mod/SG8A_ORIN_GMSL2-F_V2_AGX_Orin_YUV_JP6.2_L4TR36.4.3/: fps_monitor.sh  install.sh  multi_camera_display.sh  quick_bring_up.sh
scripts/: build_driver.sh  camera_init_service.sh  check_camera_fps.sh  check_performance.sh  init_cameras.sh  init_geac_cameras.sh  install.sh  launch_cameras.sh  monitor_camera_topics_fps.sh  quick_test.sh  save_h265_topic.py  start_cameras.sh  test_cameras.sh
service/: camera.service
src/: cr_camera_node.cpp  cr_h265_encoder.cpp  cr_image_publisher.cpp  cr_v4l2_camera.cpp  cr_vic_converter.cpp  cr_yaml_config.cpp
test/: Makefile  ORGANIZATION_SUMMARY.md  README.md  camera_framerate_tool.cpp  test_direct_conversion  test_direct_conversion.cpp  test_gpu_conversion  test_gpu_conversion.cpp  test_hybrid_performance  test_hybrid_performance.cpp  test_optimized_conversion.cpp  test_pva_conversion  test_pva_conversion.cpp  test_pva_formats  test_pva_formats.cpp  test_rgba_rgb_conversion  test_rgba_rgb_conversion.cpp  test_twostep_performance.cpp  test_uyvy_performance.sh  test_vic_performance  test_vic_performance.cpp
